added clickformore button in homepage

--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -7,11 +7,23 @@
 	position: relative;
 }
 
-/*.carousel-caption{
-	position: absolute;
-	width:100px;
-	height: 100px;
-	top: 50%;
-	padding-right: 100%;
-	padding-bottom: 100px;
-}*/
+#guide_container{
+	padding-top: 100px;
+	padding-left: 50px;
+	padding-right: 50px;
+	height:400px;
+	background-color: #009D3B;
+	color: white;
+	text-align: center;
+}
+
+#guide_container h1{
+	margin: 0 auto;
+}
+
+.button{
+	color: black;
+	margin-top: 50px;
+	padding-top: 20px;
+	padding-bottom: 20px;
+}
