--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -45,5 +45,14 @@
   </a>
 </div>
 
+<div id="guide_container">
+	<div>
+		<h1>What you should know before your first ****</h1>
+	</div>
+	<div>
+		<%= button_to "Click For More", "/", class: "button" %>
+	</div>
+</div>
+
 <%= render partial: "/layouts/footer" %>
 
