--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -51,7 +51,7 @@
           </a>
         </div>
         <div class="modal-container">
-          <a class="modal-btn btn btn-signup" id="google-text" onclick="window.location.href='/auth/google'" >
+          <a class="modal-btn btn btn-signup" id="google-text" onclick="window.location.href='/auth/google_oauth2'" >
             <svg viewBox="0 0 18 18" role="presentation" aria-hidden="true" focusable="false" style="height:18px; width: 18px; display:inline; margin-right:5px" >
               <g fill="none" fill-rule="evenodd">
                 <path d="M9 3.48c1.69 0 2.83.73 3.48 1.34l2.54-2.48C13.46.89 11.43 0 9 0 5.48 0 2.44 2.02.96 4.96l2.91 2.26C4.6 5.05 6.62 3.48 9 3.48z" fill="#EA4335"></path>
