--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -27,3 +27,42 @@
 	padding-top: 20px;
 	padding-bottom: 20px;
 }
+
+.container{
+	width:1190px;
+}
+
+.thumbnail{
+	width:285.25px;
+	height: 300px;
+	border-color: #fff;
+}
+
+.jobstyle{
+	display: inline-block;
+}
+
+.thumnail-image{
+	border-radius: 25px;
+}
+
+#latestjobheader{
+	font-weight: 600;
+	font-size: 2.571em;
+	color: #00BA51;
+	text-align: center;
+}
+
+.sectionheader{
+	font-family: 'Open Sans Condensed', sans-serif;
+}
+
+.sectionword{
+	font-family: 'Open Sans', sans-serif;
+}
+
+
+#paginate{
+	margin: 0 auto;
+	width: 200px; 
+}
