Changed all typo from affliate to affiliate

--- a/app/views/affiliates/_new.html.erb
+++ b/app/views/affiliates/_new.html.erb
@@ -1,4 +1,4 @@
-<%= form_for Affliate.new, url: affliates_path do |form| %>
+<%= form_for Affiliate.new, url: affiliates_path do |form| %>
     <div class="text-field form-group col-md-6">
         <%= form.text_field :first_name, placeholder: 'First Name', class:"form-control"%>
     </div>
