Created affiliate sign in page and able to view the page

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -19,7 +19,7 @@
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
-        <li class="nav navbar-nav navbar-right-item"><a class="modal-btn navbar-right-1">Apply</a></li>
+        <li class="nav navbar-nav navbar-right-item"><a class="modal-btn navbar-right-1"><%= link_to "Join Us as an Affiliate", affiliate_sign_in_path %></a></li>
         <li class="nav navbar-nav navbar-right-item"><a class="modal-btn navbar-right-1">Guide</a></li>
 
         <% if signed_in? %>
