Added ajax for affiliate city-state

--- a/app/views/affiliates/signin.html.erb
+++ b/app/views/affiliates/signin.html.erb
@@ -22,7 +22,7 @@
   <div class="modal-footer">
     <div>
       <% if Clearance.configuration.allow_sign_up? %>
-        <span class="text-center">Don't have an account? </span><a href="#" data-toggle="modal" data-target="#signUpModal" data-dismiss="modal">Sign Up</a>
+        <span class="text-center">Don't have an account? </span><a href="" data-toggle="modal" data-target="#signUpModal" data-dismiss="modal">Sign Up</a>
       <% end %>
     </div>
     </br>
