--- a/app/views/affiliates/signin.html.erb
+++ b/app/views/affiliates/signin.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag "/affiliates_signin" do %>
+<%= form_tag affiliate_sign_in_path do %>
   
   <div class="input-group">
     <span class="input-group-addon" id="basic-addon1"><span class="glyphicon glyphicon-envelope"></span></span>
@@ -22,7 +22,7 @@
   <div class="modal-footer">
     <div>
       <% if Clearance.configuration.allow_sign_up? %>
-        <span class="text-center">Don't have an account? </span><a href="" data-toggle="modal" data-target="#signUpModal" data-dismiss="modal">Sign Up</a>
+        <span class="text-center">Don't have an account? </span><a href="/affiliates/sign_up" data-toggle="modal" data-target="#signUpModal" data-dismiss="modal">Sign Up</a>
       <% end %>
     </div>
     </br>
