--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -47,7 +47,7 @@
 
 <div id="guide_container">
 	<div>
-		<h1 class="sectionheader">What you should know before your first ****</h1>
+		<h1 class="sectionheader">What you should know </h1>
 	</div>
 	<div>
 		<%= button_to "Click For More", "/", class: "button" %>
