--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -55,7 +55,7 @@
 </div>
 
 <div class='container'>
-  <h1 id="latestjobheader">Latest Job</h1> <br> <h2><%= link_to 'Post a job' %></h2>
+  <h1 id="latestjobheader">Latest Job</h1> <br> <h2><%= link_to 'Post a job', new_jobs_path %></h2>
   </br>
   <% @job.each do |t| %>
   <a href="" target="blank">
