added company show page

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -19,8 +19,8 @@
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
-        <li class="nav navbar-nav navbar-right-item"><a class="modal-btn navbar-right-1"><%= link_to "Join Us as an Affiliate", affiliate_sign_in_path %></a></li>
-        <li class="nav navbar-nav navbar-right-item"><a class="modal-btn navbar-right-1">Guide</a></li>
+        <li class="nav navbar-nav navbar-right-item"><%= link_to "Join Us as an Affiliate", affiliate_sign_in_path, class: "modal-btn navbar-right-1" %></li>
+        <li class="nav navbar-nav navbar-right-item"><%= link_to "Company Partnership", new_company_path, class:"modal-btn navbar-right-1" %></li>
 
         <% if signed_in? %>
         <li class="nav navbar-nav navbar-right-item"><%= link_to 'Sign out', sign_out_path, method: :delete %></li>
