--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for Job.new, url: jobs_path, method: :POST do |form| %>
+<%= form_for Job.new, url: jobs_path do |form| %>
 
     <div class="text-field form-group col-md-6">
         <%= form.text_field :name, placeholder: 'Name', class:"form-control"%>
