--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -55,10 +55,13 @@
 </div>
 
 <div class='container'>
-  <h1 id="latestjobheader">Latest Job</h1> <br> <h2><%= link_to 'Post a job', new_jobs_path %></h2>
-  </br>
+  <h1 id="latestjobheader">Latest Job</h1>
+  <br>
+  <% if signed_in? %>
+  <h2><%= link_to 'Post a job', new_job_path %></h2>
+  <% end %>
   <% @job.each do |t| %>
-  <a href="" target="blank">
+    <%= link_to job_path(t.id) do %>
     <div class="thumbnail jobstyle">
       <%= image_tag("cooking.jpg", class:"thumnail-image")%>
       <div class="caption">
@@ -67,7 +70,7 @@
         <h5>RM <%= t.price %></h5>
       </div>
     </div>
-  </a>
+    <% end %>
   <% end %>
   <div id='paginate'>
     <div class='container'><%= paginate @job ,window: 2%></div>
