--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,4 +2,4 @@
 @import 'bootstrap';
 @import '*';
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Open+Sans+Condensed:300');
-
+@import 'companies';
