--- a/app/assets/stylesheets/companies.scss
+++ b/app/assets/stylesheets/companies.scss
@@ -1,3 +1,32 @@
 // Place all the styles related to the companies controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+
+.partnership-photo {
+	width: 1300px;
+	height: 485px;
+	display: inline-block;
+	background-image: url('partnerbackground.jpg');
+}
+
+
+#partnership h3{
+	color:#1673B4;
+	margin-top: 20px;
+	margin-left: 0 auto;
+	margin-right: 0 auto;
+}
+
+.apply-button{
+	width:100px;
+	margin:auto;
+}
+
+
+.partnership-button{
+	margin-top: 10px;
+	padding: 20px 30px 20px 30px;
+	
+}
