--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -4,40 +4,37 @@
         <%= form.text_field :name, placeholder: 'Name', class:"form-control"%>
     </div>
     
+    <% category = ["Cleaning Service", "Catering Service", "Mobile and Laptop Repair", "Home Maintenance", "Movers", "Plumbing Service"] %>
+
     <div class="text-field form-group col-md-6">
-        <%= form.text_field :category, placeholder: 'Category', class:"form-control"%>
+        <%= form.select :category, options_for_select(category), class: "form-control" %>
     </div>
     
     <div class="text-field form-group col-md-6">
-        <%= form.date_field :start_date, placeholder: 'Start Date', class:"form-control"%>
+        <%= form.date_field :start_date, placeholder: 'Start Date', class: "form-control"%>
     </div>
     
     <div class="text-field form-group col-md-6">
-        <%= form.date_field :end_date, placeholder: 'End Date', class:"form-control"%>
+        <%= form.text_field :description, placeholder: 'Description', class: "form-control"%>
     </div>
     
     <div class="text-field form-group col-md-6">
-        <%= form.text_field :description, placeholder: 'Description', class:"form-control"%>
+        <%= form.text_field :price, placeholder: "Price", class: "form-control", disabled: true %>
     </div>
     
     <div class="text-field form-group col-md-6">
-        <%= form.number_field :price, placeholder: 'Price', class:"form-control"%>
+        <%= form.text_field :address, placeholder: 'Address', class: "form-control"%>
     </div>
     
-    <div class="text-field form-group col-md-6">
-        <%= form.text_field :address, placeholder: 'Address', class:"form-control"%>
+    <div class="select-field form-group col-md-6">
+        <% states = [] %>
+        <% CS.states(:my).each do |x, y| states << y.to_s end %>
+        <%= form.select :state, options_for_select(states, "Johor"), class: "form-control"%>
     </div>
     
-    <div class="text-field form-group col-md-6">
-        <%= form.text_field :state, placeholder: 'State', class:"form-control"%>
-    </div>
-    
-    <div class="text-field form-group col-md-6">
-        <%= form.text_field :city, placeholder: 'City', class:"form-control"%>
-    </div>
-    
-    <div class="text-field form-group col-md-6">
-        <%= form.text_field :postcode, placeholder: 'Postcode', class:"form-control"%>
+    <div class="select-field form-group col-md-5", id="show-city", style="display: none">
+        <% city = [] %>
+        <%= form.select :city, options_for_select(city) , class: "form-control"%>
     </div>
     
     <div class="form-group">
