--- a/app/views/users/_new.html.erb
+++ b/app/views/users/_new.html.erb
@@ -1,43 +1,41 @@
 <%= form_for User.new, url: users_path do |form| %>
     <div class="text-field form-group col-md-6">
-        <%= form.text_field :first_name, placeholder: 'First Name', class:"form-control"%>
+        <%= form.text_field :first_name, placeholder: 'First Name', class: "form-control"%>
     </div>
 
     <div class="text-field form-group col-md-6">
-        <%= form.text_field :last_name, placeholder: 'Last Name', class:"form-control" %>
+        <%= form.text_field :last_name, placeholder: 'Last Name', class: "form-control" %>
     </div>
 
     <div class="text-field form-group col-md-6">
-        <%= form.text_field :email, placeholder: 'Email' , class:"form-control"%>
+        <%= form.text_field :email, placeholder: 'Email' , class: "form-control"%>
     </div>
 
     <div class="text-field form-group col-md-6">
-        <%= form.text_field :phone, placeholder: 'Phone' , class:"form-control"%>
+        <%= form.text_field :phone, placeholder: 'Phone' , class: "form-control"%>
     </div>
 
     <div class="text-field form-group">
-        <%= form.text_field :address, placeholder: 'Address' , class:"form-control"%>
+        <%= form.text_field :address, placeholder: 'Address' , class: "form-control"%>
     </div>
 
     <div class="text-field form-group">
-        <%= form.text_field :postcode, placeholder: 'Postcode', class:"form-control"%>
+        <%= form.text_field :postcode, placeholder: 'Postcode', class: "form-control"%>
     </div>  
 
     <div class="select-field form-group col-md-6">
         <% states = [] %>
-        <% CS.states(:my).each do |x, y| states << y.to_s %><% end %>
-        <%= form.select :state, options_for_select(states, "Johor") , class:"form-control"%>
+        <% CS.states(:my).each do |x, y| states << y.to_s end %>
+        <%= form.select :state, options_for_select(states, "Johor") , class: "form-control"%>
     </div>
 
     <div class="select-field form-group col-md-5", id="show-city", style="display: none">
         <% city = [] %>
-        <%= form.select :city, options_for_select(city) , class:"form-control"%>
-
+        <%= form.select :city, options_for_select(city) , class: "form-control"%>
     </div>
 
     <div class="text-field form-group">
-        
-        <%= form.password_field :password ,placeholder: 'Password' , class:"form-control"%>
+        <%= form.password_field :password ,placeholder: 'Password' , class: "form-control"%>
     </div>
 
     <div class="form-group">
