--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -15,11 +15,15 @@
     </div>
     
     <div class="text-field form-group col-md-6">
+        <%= form.time_field :start_time, placeholder: 'Start Time', class: "form-control"%>
+    </div>
+
+    <div class="text-field form-group col-md-6">
         <%= form.text_field :description, placeholder: 'Description', class: "form-control"%>
     </div>
     
     <div class="text-field form-group col-md-6">
-        <%= form.text_field :price, placeholder: "Price", class: "form-control", disabled: true %>
+        <%= form.text_field :price, placeholder: "Price", class: "form-control", readonly: true %>
     </div>
     
     <div class="text-field form-group col-md-6">
@@ -36,6 +40,10 @@
         <% city = [] %>
         <%= form.select :city, options_for_select(city) , class: "form-control"%>
     </div>
+
+    <div class="text-field form-group">
+        <%= form.text_field :postcode, placeholder: 'Postcode', class: "form-control"%>
+    </div>  
     
     <div class="form-group">
       <%= form.submit "Post a job", class: "text-field btn-submit form-control" %>
