--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,7 +12,7 @@
  *
  *= require_self
  *= require flatpickr
- *= require flatpickr/dark	
+ *= require flatpickr/material_red
  */
 
 @import 'bootstrap-sprockets';
