--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -1,7 +1,3 @@
-<script src="//maps.google.com/maps/api/js?key=[your API key]"></script>
-<script src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"></script>
-<script src='//cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js' type='text/javascript'></script> <!-- only if you need custom infoboxes -->
-
 <%= render partial: "/layouts/navbar" %>
 
 <div class="container">
@@ -40,18 +36,7 @@
 <script type="text/javascript">
 	handler = Gmaps.build('Google');
 	handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
-  	markers = handler.addMarkers([
-    {
-      	"lat": 0,
-      	"lng": 0,
-      	"picture": {
-        	"url": "http://people.mozilla.com/~faaborg/files/shiretoko/firefoxIcon/firefox-32.png",
-        	"width":  32,
-        	"height": 32
-      	},
-      	"infowindow": "hello!"
-    	}
-  	]);
+  	markers = handler.addMarkers(<%=raw @hash.to_json %>);
   	handler.bounds.extendWith(markers);
   	handler.fitMapToBounds();
 	});
