Use patch method on Reserve button

--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -25,6 +25,6 @@
 	<div class="col-md-1"></div>
 	<div class="col-md-4 sectionstyle rightsectionstyle">
 		<h2>Accept the job now </h2>
-		<%= button_to "Reserve", "/" %>
+		<%= button_to "Reserve", job_path, method: :patch %>
 	</div>
 </div>
