modified showpage css

--- a/app/assets/stylesheets/companies.scss
+++ b/app/assets/stylesheets/companies.scss
@@ -13,10 +13,13 @@
 
 
 #partnership h3{
-	color:#1673B4;
+	color:#6F3A8F;
 	margin-top: 20px;
 	margin-left: 0 auto;
 	margin-right: 0 auto;
+	font-family: 'Open Sans Condensed', sans-serif;
+	font-weight: 1000;
+	font-size: 3em;
 }
 
 .apply-button{
@@ -28,5 +31,9 @@
 .partnership-button{
 	margin-top: 10px;
 	padding: 20px 30px 20px 30px;
-	
+}
+
+h2.table-title {
+	color:#6F3A8F;
+	text-decoration: none;
 }
