--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -7,7 +7,7 @@
 	</div>
 </div>
 <div class="container">
-  <h2>List of companies </h2>
+  <h2 class="table-title">List of companies </h2>
   <ul class="list-group">
     <li class="list-group-item">Training Sdn Bhd</li>
     <li class="list-group-item">Eboss training center</li>
