--- a/app/views/users/_new.html.erb
+++ b/app/views/users/_new.html.erb
@@ -29,7 +29,7 @@
         <%= form.select :state, options_for_select(states, "Johor") , class: "form-control"%>
     </div>
 
-    <div class="select-field form-group col-md-5", id="show-city", style="display: none">
+    <div class="select-field form-group col-md-5", id="show-city-user", style="display: none">
         <% city = [] %>
         <%= form.select :city, options_for_select(city) , class: "form-control"%>
     </div>
