--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -36,7 +36,7 @@
         <%= form.select :state, options_for_select(states, "Johor"), class: "form-control"%>
     </div>
     
-    <div class="select-field form-group col-md-5", id="show-city", style="display: none">
+    <div class="select-field form-group col-md-5", id="show-city-job", style="display: none">
         <% city = [] %>
         <%= form.select :city, options_for_select(city) , class: "form-control"%>
     </div>
