--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -28,7 +28,7 @@
   			</div>
 		</div>
 		<h2><%= image_tag("001-restaurant.svg",class:"flaticonstyle")%></h2>
-		<%= button_to "Reserve", job_path, method: :patch %> %>
+		<%= button_to "Reserve", job_path, method: :patch %>
 	</div>
 </div>
 
