css for affiliate signup

--- a/app/assets/stylesheets/jobs.scss
+++ b/app/assets/stylesheets/jobs.scss
@@ -31,7 +31,7 @@
 }
 
 .rightsectionstyle h1,h2{
-	font-family: 'Open Sans Condensed', sans-serif;
+	font-family: 'Sintony', sans-serif;
 	color: #000000;
 }
 
