--- a/app/assets/stylesheets/affliates.scss
+++ b/app/assets/stylesheets/affliates.scss
@@ -1,3 +1,46 @@
 // Place all the styles related to the affiliates controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.background {
+	width: 1285px;
+	height: 500px;
+	display: inline-block;
+	background-image: url('picture4.jpg');
+}
+
+h1 {
+	font-family: 'Sintony', sans-serif;
+	margin-right: 70px;
+	color: #FAFAFA;
+}
+
+.text {
+	margin-top: 100px;
+}
+.form-container {
+	width: 700px;
+	margin:auto;
+}
+
+.btn-apply {
+	font-family: 'Poppins', sans-serif;
+	border: 1.5px solid transparent;
+  border-color: #484848;
+  border-radius: 4px;
+  cursor: pointer;
+  background:#484848;
+  font-size: 15px;
+  line-height: 22px;
+  padding-left: 24px;
+  padding-right: 24px;
+  font-weight: 700;
+  padding-top:10px;
+  padding-bottom: 12px;
+  display: inline;
+  color:#ffffff;
+}
+
+.form-text {
+	font-family: 'Poppins', sans-serif;
+}
