--- a/app/views/affiliates/sign_up.html.erb
+++ b/app/views/affiliates/sign_up.html.erb
@@ -1,66 +1,69 @@
 <%= render partial: "/layouts/navbar" %>
 
+<div class="background">
+    
+    <h1 class="text text-right">You are the ONE</h1>
+    <h1 class="text-right">are the ONE</h1>
+    <h1 class="text-right">the ONE</h1>
+    <h1 class="text-right">ONE</h1>
+</div>
+
 
 <div class="form-container">
 
 	<div class="sub-title">
-		<h4>Apply Your Account HERE</h4>
+		<h2>Apply Your Account HERE</h2>
 	</div>	
 <%= form_for Affiliate.new, url: affiliates_path do |form| %>
     <div class="text-field form-group">
-        <%= form.text_field :first_name, placeholder: 'First Name', class:"form-control"%>
+        <%= form.text_field :first_name, placeholder: 'First Name', class:"form-control form-text"%>
     </div>  
 
     <div class="text-field form-group">
-        <%= form.text_field :last_name, placeholder: 'Last Name', class:"form-control" %>
+        <%= form.text_field :last_name, placeholder: 'Last Name', class:"form-control form-text" %>
     </div>
 
     <div class="text-field form-group">
-        <%= form.text_field :email, placeholder: 'Email' , class:"form-control"%>
+        <%= form.text_field :email, placeholder: 'Email' , class:"form-control form-text"%>
     </div>
 
     <div class="text-field form-group">
-        <%= form.text_field :phone, placeholder: 'Phone' , class:"form-control"%>
+        <%= form.text_field :phone, placeholder: 'Phone' , class:"form-control form-text"%>
     </div>
 
     <div class="text-field form-group">
-        <%= form.text_field :address, placeholder: 'Address' , class:"form-control"%>
+        <%= form.text_field :address, placeholder: 'Address' , class:"form-control form-text"%>
     </div>
 
     <div class="text-field form-group">
-        <%= form.text_field :postcode, placeholder: 'Postcode', class:"form-control"%>
+        <%= form.text_field :postcode, placeholder: 'Postcode', class:"form-control form-text"%>
     </div>  
 
-    <div class="select-field form-group">
+    <div class="select-field form-group form-text">
         <% states = [] %>
         <% CS.states(:my).each do |x, y| states << y.to_s %><% end %>
-        <%= form.select :state, options_for_select(states, "Johor") , class:"form-control"%>
+        <%= form.select :state, options_for_select(states, "Johor") , class:"form-control form-text"%>
     </div>
 
-    <div class="select-field form-group", id="show-city-affiliate", style="display: none">
+    <div class="select-field form-group form-text", id="show-city-affiliate", style="display: none">
         <% city = [] %>
-        <%= form.select :city, options_for_select(city) , class:"form-control"%>
+        <%= form.select :city, options_for_select(city) , class:"form-control form-text"%>
     </div>
 
-    <div class="text-field form-group">
+    <div class="text-field form-group form-text">
     	<p>Please provide supporting documents for verfification.
     		<%= form.file_field :verfification_documents, multiple: true%></p>	
     </div>	
 
     <div class="text-field form-group">
-        <%= form.password_field :password ,placeholder: 'Password' , class:"form-control"%>
+        <%= form.password_field :password ,placeholder: 'Password' , class:"form-control form-text"%>
     </div>
 
     <div class="form-group">
-      <%= form.submit "Apply", class: "btn-submit" %>
+      <%= form.submit "Apply", class: "btn-apply" %>
     </div> 
 
 <% end %>
 </div>
 <br>
-<footer id="myFooter">
-
-    <div class="footer-copyright">
-        <p>© 2018 Copyright Text </p>
-    </div>
-</footer>
+<%= render partial: "/layouts/footer" %>
