created page of all jobs

--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -97,5 +97,8 @@
 .joinusbutton{
 	margin: 0 auto;
 	color: #FFFFFF;
+	width:300px;
 	padding-bottom: 40px;
+	display: flex;
+	justify-content: space-around;
 }
