resize user logo

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -1,5 +1,5 @@
 .userlogo{
-	height: 50px;
+	height: 52px;
 	width: 50px;
 	border-radius: 50%;
 }
@@ -7,4 +7,9 @@
 .navbar{
 	margin-bottom: 0px;
 	background-color: #FAFAFA;
+	margin-bottom: 10px;
+}
+
+#userlogostyle{
+	padding: 0;
 }
