modified signup page css

--- a/app/views/affiliates/sign_up.html.erb
+++ b/app/views/affiliates/sign_up.html.erb
@@ -11,8 +11,8 @@
 
 <div class="form-container">
 
-	<div class="sub-title">
-		<h2>Apply Your Account HERE</h2>
+	<div>
+		<h2 class="sub-title">Apply Your Account HERE</h2>
 	</div>	
 <%= form_for Affiliate.new, url: affiliates_path do |form| %>
     <div class="text-field form-group">
