--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -45,7 +45,7 @@
 
 .thumbnail{
 	width:285.25px;
-	height: 300px;
+	height: 250px;
 	border-color: #fff;
 }
 
@@ -101,4 +101,61 @@
 	padding-bottom: 40px;
 	display: flex;
 	justify-content: space-around;
+}
+
+.caption{
+	display: flex;
+	justify-content: space-around;
+}
+
+#jobthumbnailName{
+	text-align: center;
+	height: 36px;
+	margin-top: 10px;
+	margin-bottom: 0;
+	font-family: 'Sintony', sans-serif;
+	color: #484848;
+}
+
+.captionPriceCategory{
+	padding-top: 0;
+}
+
+#jobthumbnailPrice{
+	font-family: 'Poppins', sans-serif;
+	height: 22px;
+	font-weight: 700;
+	margin:0;
+	color: #f57224;
+}
+
+#jobthumbnailCategory{
+	font-family: 'Poppins', sans-serif;
+	margin:0;
+	color: #484848;
+}
+
+#service_container{
+	background-color: #ccc;
+	text-align: center;
+	padding-bottom: 0;
+	/*height:200px;*/
+}
+
+#service_container h1{
+	color: #484848;
+}
+
+.serviceCoveredSection{
+	display: flex;
+	justify-content: space-around;
+	color: #484848;
+	font-family: 'Poppins', sans-serif;
+	padding-top: 20px;
+}
+
+.servicesimage{
+	width: 150px;
+	height: 150px;
+	border-radius: 50%;
 }
