--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -46,11 +46,27 @@
 
 <div id="guide_container">
 	<div>
-		<h1 class="sectionheader">A GUIDE TO START </h1>
+		<h1 class="sectionheader">A GUIDE TO START</h1>
 	</div>
 	<div class="button">
 		<%= button_to "CLICK FOR MORE", "/", class:"buttonstyle" %>
 	</div>
+</div>
+
+<div id="service_container">
+  <div>
+    <h1>SERVICES COVERED BY US</h1>
+  </div>
+  <div class="serviceCoveredSection">
+    <div><%= image_tag("catering.jpg", class:"servicesimage")%><h4>Catering</h4></div>
+    <div><%= image_tag("cleaningservice.jpg", class:"servicesimage")%><h4>Cleaning</h4></div>
+    <div><%= image_tag("mover.jpg", class:"servicesimage")%><h4>Mover</h4></div>
+    <div><%= image_tag("plumbing.png", class:"servicesimage")%><h4>Plumbing</h4></div>
+    <div><%= image_tag("gadgetservice", class:"servicesimage")%><h4>Gadget Repair</h4></div>
+  </div>
+  <div>
+    <h4>and more...</h4>
+  </div>  
 </div>
 
 <div class='container' id="homepagecontainer">
@@ -62,10 +78,14 @@
       <%= link_to job_path(t.id) do %>
       <div class="thumbnail jobstyle">
         <%= image_tag("cooking.jpg", class:"thumnail-image")%>
+        <h3 id="jobthumbnailName"><%= t.name %></h3>
         <div class="caption">
-          <h3><%= t.name %></h3>
-          <h5><%= t.category %></h5>
-          <h5>RM <%= t.price %></h5>
+          <div class="captionPriceCategory">
+            <h5 id="jobthumbnailPrice">RM <%= t.price %></h5>
+          </div>
+          <div class="captionPriceCategory">
+            <h5 id="jobthumbnailCategory"><%= t.category %></h5>
+          </div>
         </div>
       </div>
       <% end %>
