add column status to jobs, modify user page css

--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -40,12 +40,13 @@
 }
 
 .container{
-	width:1190px;
+	width:1000px;
 }
 
 .thumbnail{
-	width:285.25px;
-	height: 300px;
+	border-radius: 50%;
+	width:235.25px;
+	height: 250px;
 	border-color: #fff;
 }
 
